and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

11 November 2014 Makoto Asai (gdml-V10-00-09)
- G4GDMLMessenger - /persistency/gdml/clear now invokes G4RunManager to
  cleanly deletes entire geometry.

10 November 2014 Witold Pokorski (gdml-V10-00-08)
- Correction to G4GDMLReadMaterials::MixtureRead() to revert order of
  reading (first elements then materials) for mixtures by fraction;
  corrects referencing for cases when elements and materials may carry
  the same name (case reported by ATLAS).

29 October 2014 Gabriele Cosmo (gdml-V10-00-07)
- Moved USolids module from geometry/solids to externals.

18 July 2014 Gabriele Cosmo (gdml-V10-00-06)
- Added implementation for import/export of Multi-Union (G4MultiUnion)
  structures.
  Requiring updated GDML schema for multiUnionNode entity (GDML version 3.1.1).
- Updated internal schema to reflect new GDML schema release 3.1.1, for
  updated gdml_solids.xsd module.

21 May 2014 Gabriele Cosmo (gdml-V10-00-05)
- Added better description to fatal exception in case document content
  imported happens to be empty in G4GDMLRead::Read().

20 May 2014 Gabriele Cosmo (gdml-V10-00-04)
- Correction to G4GDMLRead::Read() for the case when schema validation
  is turned off, to disable initialisation of validation machinery in the
  parser and allow for standalone parsing off-network.

15 May 2014 Gabriele Cosmo (gdml-V10-00-03)
- Corrected minor Coverity defect in G4GDMLParser for uninitialised
  'strip' flag in constructors.
- Corrected potential memory leak in G4GDMLReadSolids.

11 April 2014 Gabriele Cosmo (gdml-V10-00-02)
- Corrected dump of 'phi' and 'theta' for G4Trap and G4Para in writer.
  Addressing problem report #1602.
